revert temp disable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1016,7 +1016,7 @@ unit_tests_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1024,7 +1024,7 @@ configurator_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1032,7 +1032,7 @@ configurator_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1040,7 +1040,7 @@ dot1x_eap_peap_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1048,7 +1048,7 @@ dot1x_eap_peap_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1056,7 +1056,7 @@ mac_auth_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1064,7 +1064,7 @@ mac_auth_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1072,7 +1072,7 @@ dot1x_eap_tls_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1080,7 +1080,7 @@ dot1x_eap_tls_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1088,7 +1088,7 @@ fingerbank_invalid_db_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1096,7 +1096,7 @@ security_events_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1104,7 +1104,7 @@ cli_login_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1112,7 +1112,7 @@ cli_login_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1120,7 +1120,7 @@ external_integrations_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1128,7 +1128,7 @@ captive_portal_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1136,7 +1136,7 @@ captive_portal_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1144,7 +1144,7 @@ inline_deb11:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1152,7 +1152,7 @@ inline_el8:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_devel_and_maintenance_rules
 
@@ -1163,7 +1163,7 @@ unit_tests_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1172,7 +1172,7 @@ configurator_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1181,7 +1181,7 @@ configurator_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1208,7 +1208,7 @@ dot1x_eap_peap_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1217,7 +1217,7 @@ dot1x_eap_peap_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1226,7 +1226,7 @@ mac_auth_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1235,7 +1235,7 @@ mac_auth_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1244,7 +1244,7 @@ dot1x_eap_tls_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1253,7 +1253,7 @@ dot1x_eap_tls_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1262,7 +1262,7 @@ fingerbank_invalid_db_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1271,7 +1271,7 @@ security_events_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1280,7 +1280,7 @@ cli_login_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1289,7 +1289,7 @@ cli_login_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1298,7 +1298,7 @@ external_integrations_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1307,7 +1307,7 @@ captive_portal_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1316,7 +1316,7 @@ captive_portal_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1325,7 +1325,7 @@ inline_deb11_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1334,7 +1334,7 @@ inline_el8_branches:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_JOB_NAME}-${CI_JOB_ID}
     VAGRANT_COMMON_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-common-devel
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .test_branches_only_rules
 
@@ -1343,7 +1343,7 @@ configurator_el8_pristine:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_COMMIT_TAG}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .release_only_rules
 
@@ -1351,7 +1351,7 @@ configurator_deb11_pristine:
   variables:
     VAGRANT_PF_DOTFILE_PATH: /var/local/gitlab-runner/vagrant/vagrant-${CI_COMMIT_TAG}-${CI_JOB_ID}
   extends:
-    #- .test_job
+    - .test_job
     - .test_script_job
     - .release_only_rules
 
